# mmtf

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
src/janucaria/mmtf/: codec_header.hpp  mmtf.hpp  type_traits.hpp
test/: CMakeLists.txt
test/src/: codec_header_test.cpp  decode_header_test.cpp  encoding_test.cpp
